k8s/statistics-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: statistics-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: statistics-service
  template:
    metadata:
      labels:
        app: statistics-service
    spec:
      containers:
        - image: zp8358/statisticsservice:1.0.0-SNAPSHOT-9.1
          #resources:
            #requests:
              #cpu: "30m"
            #limits:
              #cpu: "50m"
          name: statistics-service
          ports:
            - containerPort: 8082
              name: server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /v1/statistics/checks/health/liveness
              port: server
            initialDelaySeconds: 1800
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /v1/statistics/checks/health/readiness
              port: server
            initialDelaySeconds: 1800
            periodSeconds: 3

---

apiVersion: v1
kind: Service
metadata:
  name: statistics-service
spec:
  type: LoadBalancer
  ports:
    - port: 8082
      protocol: TCP
      targetPort: server
  selector:
    app: statistics-service
